Fix resume button and remove extra margin from section

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ body {
   border: 1px solid var(--light-green);
   border-radius: 10%;
   padding: 5px;
-  width: 20%;
+  width: 25%;
   margin-top: 1rem;
   text-align: center;
 }
@@ -52,7 +52,7 @@ body {
   direction: column;
   justify-content: center;
   align-items: center;
-  margin: 12rem 0;
+  margin: 10rem 0;
 }
 
 .d-section > div {
@@ -182,12 +182,12 @@ h2 {
 @media (min-width: 992px) {
 
   body {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 
   h1,
   h2 {
-    font-size: 5rem;
+    font-size: 4rem;
   }
 
   .resume {
@@ -205,7 +205,7 @@ h2 {
   }
 
   .project-img {
-    width: 125%;
+    width: 200%;
     display: flex;
     flex-direction: column;
     justify-content: center;
